[package]
name = "pen-steer"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = "fat"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
env_logger = "0.11.8"
log = "0.4.27"
native-dialog = { version = "0.9.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }

[dependencies.eframe]
version = "0.32.0"
default-features = false
features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11"
]

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.30.1"
input-linux = "0.7.1"
