[package]
name = "pen-steer"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
directories = "6.0.0"
egui_extras = { version = "0.33.3", default-features = false, features = ["svg"] }
env_logger = "0.11.8"
log = "0.4.29"
native-dialog = { version = "0.9.4", features = ["windows_dpi_awareness", "windows_visual_styles"] }

[dependencies.eframe]
version = "0.33.2"
default-features = false
features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11"
]

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.30.1"
input-linux = "0.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
vigem-client = "0.1.4"
